@@ -4,6 +4,8 @@ Release 1.6.2 Start 01/10/2009
 1.  O_RDWR mode for fifo in qmail-cat
 04/10/2009
 2.  Added svctool man page
+06/10/2009
+3.  Added pam-multi, pam-checkpwd
 
 * Fri Oct  2 2009 mbhangui@gmail.com
 Release 1.6.1 Start 13/09/2009
